--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,21 +18,28 @@
 				<h2 class="products-title">Basado en tu última visita</h2>
 			</div>
 			<!-- Show the "visited" products -->
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/products/detail/¿?">
-						<figure class="product-box_image">
-							<img src="/images/products/¿?" alt="imagen de producto">
-						</figure>
-						<article class="product-box_data">
-							<h2>FINAL PRICE</h2>
-							<span>DISCOUNT % OFF</span>
-							<p>PRODUCT NAME</p>
-							<i class="fas fa-truck"></i>
-						</article>
-					</a>
-				</section>
-			</div>
+
+			<!-- 			al ARRAY productos VISITADOS los recorro y como hice un destructuring utilizo las propiedades de cada producto con la categoria 'Visited' -->
+			<% productosVisited.forEach(({id,name,price,discount,image}) => { %>
+
+				<div class="col-12 col-sm-6 col-lg-3">
+					<section class="product-box">
+						<a href="/products/detail/<%= id %>">
+							<figure class="product-box_image">
+								<img src="/images/products/<%= image %>" alt="imagen de producto">
+							</figure>
+							<article class="product-box_data">
+								<h2><%= toThousand(+price)  %></h2>
+								<span><%= discount %> </span>
+								<p><%= name %> </p>
+								<i class="fas fa-truck"></i>
+							</article>
+						</a>
+					</section>
+				</div>
+			 
+			<% }) %>
+			
 		</div>
 	</div>
 	<!-- /ultima visita -->
