--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -60,8 +60,8 @@
 						<hr>
 
 						<a href="/products/edit/<%= product.id %>" class="action-button edit">EDITAR PRODUCTO</a>
-						<form action="/products/delete/?? method="POST" style="display: inline-flex">
-							<button type="submit" class="action-button delete">ELIMINAR</button>
+						<form action="/products/delete/<%= product.id %>?_method=DELETE"  method="POST" style="display: inline-flex">
+							<button type="submit" class="action-button delete" style="cursor:pointer">ELIMINAR</button>
 						</form>
 					</article>
 				</div>
