--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -17,7 +17,7 @@
 
 		<!-- 	formulario -->
 
-			<form  method="POST">
+			<form  method="POST" enctype="multipart/form-data">
 				<div class="row product-detail">
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del producto:</label>
@@ -40,7 +40,7 @@
 						</select>
 					</div>
 					<div class="col-12">
-						<label for="description" class="form-label">Descipción:</label>
+						<label for="description" class="form-label">Descripción:</label>
 						<textarea name="description" id="description" class="form-input" style="resize:none ;"></textarea>
 					</div>
 					<div class="col-12">
