--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -19,18 +19,22 @@
 
 			<form  method="POST" enctype="multipart/form-data">
 				<div class="row product-detail">
+					<!-- Nombre del producto -->
 					<div class="col-12 col-md-6">
 						<label for="name" class="form-label">Nombre del producto:</label>
 						<input type="text" id="name" name="name" placeholder="Ej: Zapatillas Reebok" class="form-input">
 					</div>
+					<!-- Precio del producto -->
 					<div class="col-12 col-md-6">
 						<label for="price" class="form-label">Precio del producto:</label>
 						<input type="number" id="price" name="price" placeholder="Ej: 5678" class="form-input">
 					</div>
+					<!-- Descuento del producto -->
 					<div class="col-12 col-md-6">
 						<label for="discount" class="form-label">Descuento:</label>
 						<input type="number" id="discount" name="discount" placeholder="Ej: 15" class="form-input">
 					</div>
+					<!-- Categoria del producto -->
 					<div class="col-12 col-md-6">
 						<label for="category" class="form-label">Categoría:</label>
 						<select name="category" id="category" class="form-input">
@@ -39,10 +43,17 @@
 							<option value="visited">Últimos agregados</option>
 						</select>
 					</div>
+					<!-- Descripcion del producto -->
 					<div class="col-12">
 						<label for="description" class="form-label">Descripción:</label>
 						<textarea name="description" id="description" class="form-input" style="resize:none ;"></textarea>
 					</div>
+					<!-- Agregar imagen del producto -->
+					<div class="col-12 col-md-6">
+						<label for="image" class="form-label">Agregar imagen:</label>
+						<input type="file" id="image" name="image"  class="form-input" accept="image/*">
+					</div>
+				<!-- 	Boton de Guardar  -->
 					<div class="col-12">
 						<button type="submit" class="buy-now-button">Guardar producto</button>
 					</div>
