--- a/src/views/product-edit-form.ejs
+++ b/src/views/product-edit-form.ejs
@@ -48,8 +48,15 @@
 					</div>
 					<!-- Editar imagen del producto -->
 					<div class="col-12 col-md-6">
-						<label for="image" class="form-label">Editar imagen:</label>
-						<input type="file" id="image" name="image"  class="form-input" accept="image/*">
+						<div class="row">
+							<div class="col-6">
+								<img src="/images/products/<%= product.image  %>" alt="">
+							</div>
+							<div class="col-6">
+								<label for="image" class="form-label">Editar imagen:</label>
+								<input type="file" id="image" name="image"  class="form-input" accept="image/*">
+							</div>
+						</div>
 					</div>
 					<div class="col-12">
 						<button type="submit" class="buy-now-button">Guardar producto</button>
