--- a/src/views/product-create-form.ejs
+++ b/src/views/product-create-form.ejs
@@ -50,8 +50,16 @@
 					</div>
 					<!-- Agregar imagen del producto -->
 					<div class="col-12 col-md-6">
-						<label for="image" class="form-label">Agregar imagen:</label>
-						<input type="file" id="image" name="image"  class="form-input" accept="image/*">
+						<div class="row">
+							<div class="col-6">
+								<img src="" id="imgPreview" alt="">
+
+							</div>
+							<div class="col-6">
+								<label for="image" class="form-label">Agregar imagen:</label>
+								<input type="file" id="image" name="image"  class="form-input" accept="image/*" >
+							</div>
+						</div>
 					</div>
 				<!-- 	Boton de Guardar  -->
 					<div class="col-12">
@@ -67,5 +75,17 @@
 	<!-- footer -->
 	<%- include('partials/footer') %>
 	<!-- /footer -->
+	<script>
+		//capturo el elemento de ID image , añado un evento de escucha que al captar que carga  una imagen me ejecuta una funcion. 
+		document.getElementById('image').addEventListener('change',(e) => {
+			let reader = new FileReader();
+		reader.readAsDataURL(e.target.files[0]) // con la propiedad e.target accedo a lo que me devuelve files
+		reader.onload = () =>{
+			document.getElementById('imgPreview').src = reader.result
+		}
+
+		})
+		
+	</script>
 </body>	
 </html>
